--- a/front/src/index.css
+++ b/front/src/index.css
@@ -17,3 +17,95 @@ code {
   height: 100vh;
   overflow: hidden;
 }
+
+.unity_ui {
+  display: flex;
+  width: 50%;
+  height: 100%;
+}
+
+.test_ui {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.videos_container {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+
+.video_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.local_video {
+  display: flex;
+  background-color: black;
+  color: white;
+  width: 320px;
+  height: 180px;
+  margin: 5px;
+  
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.remote_video {
+  display: flex;
+  background-color: black;
+  width: 320px;
+  height: 180px;
+  margin: 5px;
+  color: white;
+
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.test_img {
+  display: flex;
+  background-color: black;
+  width: 320px;
+  height: 180px;
+  margin: 5px;
+  color: white;
+
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.button_join, 
+.button_default {
+  width:100px;
+  display:flex;
+  justify-content: center;
+  border:1px solid #aaa;
+  border-radius:4px;
+  margin:8px 6px;
+  outline:none;
+  padding:8px;
+  box-sizing:border-box;
+  transition:.2s;
+  margin-left: auto;
+  margin-right: auto;
+
+  cursor: pointer;
+}
+
+.button_join:hover, 
+.button_default:hover {
+  color: rgba(0, 0, 77, 0.8);
+  border-color:rgba(0, 0, 77, 0.8);
+  box-shadow:0 0 4px 0 rgba(0, 0, 77, 0.8);
+}
+
+.button_join{
+  margin: 10px auto 0px 10px;
+}
